--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DOM DOM DOMMMMMMM!!!</title>
     <!-- YOUR MAY IMPORT HERE -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- DO NOT ADD ANY HTML HERE -->
